--- a/src/AdminApp/UserControls/UserDetailsControl.xaml
+++ b/src/AdminApp/UserControls/UserDetailsControl.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AdminApp.UserControls"
              xmlns:Base="clr-namespace:WPF.Shared.UserControls;assembly=WPF.Shared"
+             xmlns:AttachedProperties ="clr-namespace:WPF.Shared.AttachedProperties;assembly=WPF.Shared"
              xmlns:Converters ="clr-namespace:WPF.Shared.Converters;assembly=WPF.Shared"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -20,8 +21,14 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical" Grid.Row="0">
             <Label Content="User Detail" FontWeight="Bold" />
-            <Label Content="{Binding Item.Name, RelativeSource={RelativeSource AncestorType=UserControl}, FallbackValue=Username}" />
-            <CheckBox IsChecked="{Binding Item.IsSystem, RelativeSource={RelativeSource AncestorType=UserControl}, FallbackValue=true}" Content="Is System User?" IsEnabled="False" />
+            <AdornerDecorator>
+                <TextBox x:Name="tbUsername" Text="{Binding Item.Name, RelativeSource={RelativeSource AncestorType=UserControl}}" IsEnabled="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}}">
+                    <AttachedProperties:PlaceholderService.Placeholder>
+                        <TextBlock>Username</TextBlock>
+                    </AttachedProperties:PlaceholderService.Placeholder>
+                </TextBox>
+            </AdornerDecorator>
+            <CheckBox IsChecked="{Binding Item.IsSystem, RelativeSource={RelativeSource AncestorType=UserControl}, FallbackValue=true}" Content="Is System User?" IsEnabled="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}}" />
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
