--- a/src/AdminApp/UserControls/UserDetailsControl.xaml
+++ b/src/AdminApp/UserControls/UserDetailsControl.xaml
@@ -77,7 +77,7 @@
                         </ListView.ItemTemplate>
                     </ListView>
                 </DockPanel>
-                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}" Command="{Binding AddValueCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
             </Grid>
             <Grid Grid.Column="0" Grid.Row="1" Margin="2,2,2,0">
                 <Grid.RowDefinitions>
@@ -96,7 +96,7 @@
                         </ListView.ItemTemplate>
                     </ListView>
                 </DockPanel>
-                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}" Command="{Binding AddRoleCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
             </Grid>
             <Grid Grid.Column="1" Grid.Row="1" Margin="2,2,2,0">
                 <Grid.RowDefinitions>
@@ -115,7 +115,7 @@
                         </ListView.ItemTemplate>
                     </ListView>
                 </DockPanel>
-                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}" Command="{Binding AddOwnedRoleCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
             </Grid>
         </Grid>
     </Grid>
