--- a/src/AdminApp/Views/AddLoginToUserWindow.xaml
+++ b/src/AdminApp/Views/AddLoginToUserWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:AdminApp.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        Title="AddLoginToUserWindow" Height="200" Width="200">
+        Title="AddLoginToUserWindow" Height="200" Width="200" WindowStyle="ToolWindow">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
