--- a/src/AdminApp/Views/AddValueToUserWindow.xaml
+++ b/src/AdminApp/Views/AddValueToUserWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:AdminApp.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner"
-        Title="AddValueToUserWindow" Height="450" Width="800">
+        Title="AddValueToUserWindow" Height="450" Width="800" WindowStyle="ToolWindow">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
